--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9hmFw208+6A26Kmbkn4m8",
+      "authorship_tag": "ABX9TyP1zW+cdN7hyXA7+Qde+c+F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUJNmVKj7-id",
-        "outputId": "dcdacb97-ea4c-49b4-9145-fe53887c686e"
+        "outputId": "04175bbc-654f-4b50-8b4b-51ca7f7e4937"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "f\n"
+            "10\n",
+            "20\n"
           ]
         }
       ],
       "source": [
-        "print(\"f\")"
+        "a=10;b=20\n",
+        "print(a)\n",
+        "print(b)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=1+2+3+\\\n",
+        "4+5\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FmaQIKY39wK-",
+        "outputId": "7651911b-26d9-47f4-ba7e-865e77560cf1"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age=25\n",
+        "if(age>18):\n",
+        "  print(\"major\")\n",
+        "else:\n",
+        "  print(\"minor\")\n",
+        "print(type(age))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EiWS00C892UM",
+        "outputId": "10e48cf1-8c00-4287-b9f9-62c36460e65e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "major\n",
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(age)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZZaApjrd-Obh",
+        "outputId": "7d104153-559e-45c5-d893-d0e3792366ef"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
       ]
     }
   ]
