--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1zW+cdN7hyXA7+Qde+c+F",
+      "authorship_tag": "ABX9TyNT6MwdxsXlEfYvW+vj9ndu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SachinGoyal94/Python/blob/main/1_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "Welcome to a fantastic journey of learning Python\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "OnJnAPhN-scp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
