--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNT6MwdxsXlEfYvW+vj9ndu",
+      "authorship_tag": "ABX9TyN5gZsA9j29gaCGJ/DCzWpC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,9 +95,9 @@
       "source": [
         "age=25\n",
         "if(age>18):\n",
-        "  print(\"major\")\n",
+        "  print(\"major\",age)\n",
         "else:\n",
-        "  print(\"minor\")\n",
+        "  print(\"minor\",age)\n",
         "print(type(age))"
       ],
       "metadata": {
@@ -105,15 +105,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EiWS00C892UM",
-        "outputId": "10e48cf1-8c00-4287-b9f9-62c36460e65e"
+        "outputId": "cf7b0091-d0f6-474f-aecd-cea0ad0c8bef"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "major\n",
+            "major 25\n",
             "<class 'int'>\n"
           ]
         }
