--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5gZsA9j29gaCGJ/DCzWpC",
+      "authorship_tag": "ABX9TyMf0SgfFW+rmS//XElDSfpB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUJNmVKj7-id",
-        "outputId": "04175bbc-654f-4b50-8b4b-51ca7f7e4937"
+        "outputId": "b40c0a6f-0c95-4696-9013-461a3344850d"
       },
       "outputs": [
         {
@@ -55,14 +55,16 @@
           "name": "stdout",
           "text": [
             "10\n",
-            "20\n"
+            "20\n",
+            "False <class 'bool'>\n"
           ]
         }
       ],
       "source": [
         "a=10;b=20\n",
         "print(a)\n",
-        "print(b)"
+        "print(b)\n",
+        "print(a==b,type(a==b))"
       ]
     },
     {
@@ -93,7 +95,7 @@
     {
       "cell_type": "code",
       "source": [
-        "age=25\n",
+        "age=int(input(\"Enter your age\"))\n",
         "if(age>18):\n",
         "  print(\"major\",age)\n",
         "else:\n",
@@ -105,14 +107,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EiWS00C892UM",
-        "outputId": "cf7b0091-d0f6-474f-aecd-cea0ad0c8bef"
+        "outputId": "39a9617b-f107-40d9-c8f1-0bb4d8c6bfbe"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Enter your age25\n",
             "major 25\n",
             "<class 'int'>\n"
           ]
@@ -142,6 +145,38 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "###   TypeConversions  age=datatype(value)\n",
+        "age =25\n",
+        "strings=str(age)\n",
+        "print(strings)\n",
+        "value=\"Sachin\"\n",
+        "name=str(value)\n",
+        "print(name)\n",
+        "print(\"concatenating string\",value+str(age))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mvRjW_uSCY0-",
+        "outputId": "a55bb298-32dc-42af-e373-74244b489729"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n",
+            "Sachin\n",
+            "Sachin25\n"
+          ]
         }
       ]
     }
