--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMf0SgfFW+rmS//XElDSfpB",
+      "authorship_tag": "ABX9TyMnyfHEWz8qbRrt5iiIqqVQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,6 +176,87 @@
             "25\n",
             "Sachin\n",
             "Sachin25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = float(input(\"Enter first number: \"))\n",
+        "num2 = float(input(\"Enter second number: \"))\n",
+        "\n",
+        "# Performing arithmetic operations\n",
+        "addition = num1 + num2\n",
+        "subtraction = num1 - num2\n",
+        "multiplication = num1 * num2\n",
+        "division = num1 / num2\n",
+        "floor_division = num1 // num2\n",
+        "modulus = num1 % num2\n",
+        "exponentiation = num1 ** num2\n",
+        "\n",
+        "# Displaying results\n",
+        "print(\"Addition:\", addition)\n",
+        "print(\"Subtraction:\", subtraction)\n",
+        "print(\"Multiplication:\", multiplication)\n",
+        "print(\"Division:\", division)\n",
+        "print(\"Floor Division:\", floor_division)\n",
+        "print(\"Modulus:\", modulus)\n",
+        "print(\"Exponentiation:\", exponentiation)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qFpEjTVzGnwO",
+        "outputId": "07dcb892-97c6-41be-e766-b5c0677a272f"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 10\n",
+            "Enter second number: 20\n",
+            "Addition: 30.0\n",
+            "Subtraction: -10.0\n",
+            "Multiplication: 200.0\n",
+            "Division: 0.5\n",
+            "Floor Division: 0.0\n",
+            "Modulus: 10.0\n",
+            "Exponentiation: 1e+20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X=1\n",
+        "Y=0\n",
+        "print( X or Y )\n",
+        "print( X and Y)\n",
+        "print( not X)\n",
+        "print( X!=Y,X>Y,X<Y,X>=Y,X<=Y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xH-O_FpqGry1",
+        "outputId": "dfd68d95-7951-420e-e9c5-a9e59465117d"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "0\n",
+            "False\n",
+            "True True False True False\n"
           ]
         }
       ]
