--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnyfHEWz8qbRrt5iiIqqVQ",
+      "authorship_tag": "ABX9TyMRZLfBWDdeKu5VG6i0Yoj1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,8 @@
         "age=int(input(\"Enter your age\"))\n",
         "if(age>18):\n",
         "  print(\"major\",age)\n",
+        "elif age<18 and age>13:\n",
+        "  print(\"teenager\",age)\n",
         "else:\n",
         "  print(\"minor\",age)\n",
         "print(type(age))"
@@ -107,16 +109,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EiWS00C892UM",
-        "outputId": "39a9617b-f107-40d9-c8f1-0bb4d8c6bfbe"
+        "outputId": "e8baca3e-21e1-42c6-ce33-032d17553141"
       },
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your age25\n",
-            "major 25\n",
+            "Enter your age15\n",
+            "teenager 15\n",
             "<class 'int'>\n"
           ]
         }
