--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRZLfBWDdeKu5VG6i0Yoj1",
+      "authorship_tag": "ABX9TyP52QfoiPOnJCRGzY1JiH0S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,6 +259,173 @@
             "0\n",
             "False\n",
             "True True False True False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uGd70_wDQW6_",
+        "outputId": "306df4e7-ec06-43ab-9f5b-692d4532676f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,10,2):\n",
+        "  if i==5:\n",
+        "    break\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EKIM8xmgQg0E",
+        "outputId": "05d47679-a336-418b-9699-f695fd8bba53"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in \"Sachin Goyal\":\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nPG8w8TOQjEr",
+        "outputId": "48d9b119-b6a8-4251-db94-e2d8fae1eda5"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "S\n",
+            "a\n",
+            "c\n",
+            "h\n",
+            "i\n",
+            "n\n",
+            " \n",
+            "G\n",
+            "o\n",
+            "y\n",
+            "a\n",
+            "l\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "pass does nothing just a code line\n",
+        "'''\n",
+        "i=1\n",
+        "while(i<10):\n",
+        "  i=i+1\n",
+        "  if i%2==0:\n",
+        "    print(\"skip this iteration\",i)\n",
+        "    continue\n",
+        "  else:\n",
+        "    pass\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BlTavGY4Q63w",
+        "outputId": "215e3bd3-1791-4c51-d2d5-8039cbfa7028"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "skip this iteration 2\n",
+            "3\n",
+            "skip this iteration 4\n",
+            "5\n",
+            "skip this iteration 6\n",
+            "7\n",
+            "skip this iteration 8\n",
+            "9\n",
+            "skip this iteration 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i=0\n",
+        "for i in range(4):\n",
+        "  for j in range (i+1):\n",
+        "    print(\"i\",i,\"j\",j)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k67PnSUGR7kc",
+        "outputId": "6b3d2501-f751-4d84-bd1d-238a51412d2c"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i 0 j 0\n",
+            "i 1 j 0\n",
+            "i 1 j 1\n",
+            "i 2 j 0\n",
+            "i 2 j 1\n",
+            "i 2 j 2\n",
+            "i 3 j 0\n",
+            "i 3 j 1\n",
+            "i 3 j 2\n",
+            "i 3 j 3\n"
           ]
         }
       ]
