--- a/1_python.ipynb
+++ b/1_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP52QfoiPOnJCRGzY1JiH0S",
+      "authorship_tag": "ABX9TyNDq7bvSiw8lGag/GbAFY+2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -426,6 +426,36 @@
             "i 3 j 1\n",
             "i 3 j 2\n",
             "i 3 j 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ans=\"Naman\"\n",
+        "for i in range(len(ans)):\n",
+        "  if i==len(ans)-i-1:\n",
+        "    print(\"palindrome\")\n",
+        "    break\n",
+        "  if ans[i]!=ans[len(ans)-i-1]:\n",
+        "    print(\"Not a palindrome\")\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "wi3f-gLsaj_e",
+        "outputId": "0d1038f1-d7c5-414e-c9ec-699819531b1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Not a palindrome\n"
           ]
         }
       ]
