--- a/2_DataStructures.ipynb
+++ b/2_DataStructures.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpPOQBiJfvGSLkP63Y7cVA",
+      "authorship_tag": "ABX9TyMnhk7xJkZEILg0nLBy9zaM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "id": "GiPBno4ZgSKy",
         "outputId": "1329d089-4040-4076-b425-bddde8d1a527"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
         "id": "EiKx9fO2gbl0",
         "outputId": "f0848ff3-60d9-4697-ba34-7c4c6ece2de9"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         "id": "A5SCthKVg3gN",
         "outputId": "76fc50a9-2ba9-43cb-b45d-b194bc4bae42"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
         "id": "yLtRHxcwhJwa",
         "outputId": "ee9fe221-eaef-46ed-a19c-7f239efe7d8d"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "id": "Vick25g8hS1y",
         "outputId": "040cd478-e700-4387-d6ee-8f84fafba72c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "id": "1sd3xJE2hXq0",
         "outputId": "bf339575-d8f0-4972-8b6f-021c5748e6eb"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +221,7 @@
         "id": "LFSk5ba3h1ZM",
         "outputId": "594be5c0-dc77-4fe3-bbc8-06befabec5b9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
         "id": "qTGBErAyh5Kv",
         "outputId": "4e6f55a7-52e1-4bb9-d1e3-2da1dba8969b"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,6 +271,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for index,values in enemurate(lists):\n",
+        "  print(index,values)"
+      ],
+      "metadata": {
+        "id": "M7NL2CkNyeDD"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
