--- a/2_Lists.ipynb
+++ b/2_Lists.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnhk7xJkZEILg0nLBy9zaM",
+      "authorship_tag": "ABX9TyOdt0YBi2+QGlxLZ4cTscmi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,9 +255,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qTGBErAyh5Kv",
-        "outputId": "4e6f55a7-52e1-4bb9-d1e3-2da1dba8969b"
+        "outputId": "c740b1ac-0593-42d6-89b3-31b9104696c2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,16 +273,86 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "enumerate is used to print index and their values together"
+      ],
+      "metadata": {
+        "id": "xYH1-RJCzrt3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "for index,values in enemurate(lists):\n",
+        "lists=[1,1000,23,34,12,123]\n",
+        "for index,values in enumerate(lists):\n",
         "  print(index,values)"
       ],
       "metadata": {
-        "id": "M7NL2CkNyeDD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xzD_a3fbzRST",
+        "outputId": "1d96904e-9809-4868-b3bb-a06cf56d4b0b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1\n",
+            "1 1000\n",
+            "2 23\n",
+            "3 34\n",
+            "4 12\n",
+            "5 123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "list comprehension\n",
+        "\n",
+        "*   Basic  list=[expression for item in variable ]\n",
+        "*   Advanced  list=[expression for item in variable if condition ]\n",
+        "*   Nested list=[[i,j] for i in list1 for j in list2]"
+      ],
+      "metadata": {
+        "id": "sMUTTpRJ0bfu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lists=[i*i for i in range(10)]\n",
+        "adv=[i*i for i in range(10) if i%2==0 ]\n",
+        "nested=[[i,j] for i in lists for j in adv]\n",
+        "print(lists)\n",
+        "print(adv)\n",
+        "print(nested)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pEof6WRo0ZjZ",
+        "outputId": "e1f888cf-04c8-4694-f72a-a9419022a42a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+            "[0, 4, 16, 36, 64]\n",
+            "[[0, 0], [0, 4], [0, 16], [0, 36], [0, 64], [1, 0], [1, 4], [1, 16], [1, 36], [1, 64], [4, 0], [4, 4], [4, 16], [4, 36], [4, 64], [9, 0], [9, 4], [9, 16], [9, 36], [9, 64], [16, 0], [16, 4], [16, 16], [16, 36], [16, 64], [25, 0], [25, 4], [25, 16], [25, 36], [25, 64], [36, 0], [36, 4], [36, 16], [36, 36], [36, 64], [49, 0], [49, 4], [49, 16], [49, 36], [49, 64], [64, 0], [64, 4], [64, 16], [64, 36], [64, 64], [81, 0], [81, 4], [81, 16], [81, 36], [81, 64]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
