--- a/4_Sets.ipynb
+++ b/4_Sets.ipynb
@@ -1,94 +1,156 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T16:02:34.117364Z",
+     "start_time": "2025-06-17T16:02:34.031687Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Creating a set and demonstrating set behavior\n",
+    "sets = {1, 2, 3, 4, 1, 2, 3, 4}\n",
+    "print(sets, type(sets))  # Duplicates are removed in a set\n",
+    "\n",
+    "# Creating a new set with mixed types\n",
+    "new_set = set([\"hello World\", 3.14])\n",
+    "print(new_set)\n",
+    "\n",
+    "# Adding an element\n",
+    "new_set.add(\"added\")\n",
+    "print(new_set)\n",
+    "\n",
+    "# Removing an element\n",
+    "new_set.remove(\"added\")\n",
+    "print(new_set)\n",
+    "\n",
+    "# Add again\n",
+    "new_set.add(\"added\")\n",
+    "\n",
+    "'''\n",
+    "remove() raises an error if the element is not found,\n",
+    "whereas discard() does nothing in that case\n",
+    "'''\n",
+    "new_set.discard(11)  # No error even if 11 isn't present\n",
+    "# new_set.remove(111111)  # Would raise an error if uncommented\n",
+    "\n",
+    "# pop() removes and returns a random element\n",
+    "popped = new_set.pop()\n",
+    "print(new_set)\n",
+    "\n",
+    "# clear() removes all elements\n",
+    "new_set.clear()\n",
+    "print('after removing', new_set)\n",
+    "\n",
+    "# Membership tests\n",
+    "new_set = {\"hello World\", 3.14}\n",
+    "print(\"hello World\" in new_set)\n",
+    "print(\"first message\" in new_set)\n",
+    "\n"
+   ],
+   "id": "fa047e366cda6ec2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4} <class 'set'>\n",
+      "{3.14, 'hello World'}\n",
+      "{'added', 3.14, 'hello World'}\n",
+      "{3.14, 'hello World'}\n",
+      "{3.14, 'hello World'}\n",
+      "after removing set()\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
    "metadata": {},
    "cell_type": "raw",
+   "source": "",
+   "id": "7eaccba2daff33e0",
+   "outputs": null,
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "{\n",
-    " \"cells\": [\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"id\": \"db01818d16fa79b9\",\n",
-    "   \"metadata\": {\n",
-    "    \"ExecuteTime\": {\n",
-    "     \"end_time\": \"2025-06-16T19:40:36.457705Z\",\n",
-    "     \"start_time\": \"2025-06-16T19:40:36.443074Z\"\n",
-    "    }\n",
-    "   },\n",
-    "   \"source\": [\n",
-    "    \"sets={1,2,3,4,1,2,3,4}\\n\",\n",
-    "    \"print(sets,type(sets))\\n\",\n",
-    "    \"new_set=set([\\\"hello World\\\",3.14])\\n\",\n",
-    "    \"print(new_set)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"new_set.add(\\\"added\\\")\\n\",\n",
-    "    \"print(new_set)\\n\",\n",
-    "    \"new_set.remove(\\\"added\\\")\\n\",\n",
-    "    \"print(new_set)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"new_set.add(\\\"added\\\")\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"'''\\n\",\n",
-    "    \"remove raises error if element not found \\n\",\n",
-    "    \"whereas discard doesn't\\n\",\n",
-    "    \"'''\\n\",\n",
-    "    \"new_set.discard(11)\\n\",\n",
-    "    \"'''new_set.remove(111111)'''\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"''' pop method is used to return randomlt removed element '''\\n\",\n",
-    "    \"popped=new_set.pop()\\n\",\n",
-    "    \"print(new_set)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"new_set.clear()\\n\",\n",
-    "    \"print('after removing ',new_set)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"new_set={\\\"hello World\\\",3.14}\\n\",\n",
-    "    \"print(\\\"hello World\\\" in new_set)\\n\",\n",
-    "    \"print(\\\"first message\\\" in new_set)\"\n",
-    "   ],\n",
-    "   \"outputs\": [\n",
-    "    {\n",
-    "     \"name\": \"stdout\",\n",
-    "     \"output_type\": \"stream\",\n",
-    "     \"text\": [\n",
-    "      \"{1, 2, 3, 4} <class 'set'>\\n\",\n",
-    "      \"{3.14, 'hello World'}\\n\",\n",
-    "      \"{3.14, 'hello World', 'added'}\\n\",\n",
-    "      \"{3.14, 'hello World'}\\n\",\n",
-    "      \"{'hello World', 'added'}\\n\",\n",
-    "      \"after removing  set()\\n\",\n",
-    "      \"True\\n\",\n",
-    "      \"False\\n\"\n",
-    "     ]\n",
-    "    }\n",
-    "   ],\n",
-    "   \"execution_count\": 19\n",
-    "  }\n",
-    " ],\n",
-    " \"metadata\": {\n",
-    "  \"kernelspec\": {\n",
-    "   \"display_name\": \"Python 3\",\n",
-    "   \"language\": \"python\",\n",
-    "   \"name\": \"python3\"\n",
-    "  },\n",
-    "  \"language_info\": {\n",
-    "   \"codemirror_mode\": {\n",
-    "    \"name\": \"ipython\",\n",
-    "    \"version\": 3\n",
-    "   },\n",
-    "   \"file_extension\": \".py\",\n",
-    "   \"mimetype\": \"text/x-python\",\n",
-    "   \"name\": \"python\",\n",
-    "   \"nbconvert_exporter\": \"python\",\n",
-    "   \"pygments_lexer\": \"ipython3\",\n",
-    "   \"version\": \"3.13.4\"\n",
-    "  }\n",
-    " },\n",
-    " \"nbformat\": 4,\n",
-    " \"nbformat_minor\": 5\n",
-    "}\n"
+    "MatheMatical Operations\n",
+    "\n",
+    "Intersection Update modifies original set by just keeping intersecting values\n",
+    "\n",
+    "Subset A<=B\n",
+    "SuperSet A>=B\n",
+    "Proper Subset A>B"
    ],
-   "id": "7eaccba2daff33e0"
+   "id": "2700b728ae962e71"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T16:14:04.958449Z",
+     "start_time": "2025-06-17T16:14:04.940763Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "set1={1,2,3,4,5,6}\n",
+    "set2={4,5,6,7,8,9}\n",
+    "print(set1.union(set2))\n",
+    "print(set1.intersection(set2))\n",
+    "print(set1.difference(set2))\n",
+    "print(set1.symmetric_difference(set2))\n",
+    "\n",
+    "set1.intersection_update(set2)\n",
+    "print(set1)\n",
+    "print(set2)\n",
+    "\n",
+    "set1={4,5,6}\n",
+    "set2={4,5,6,7,8,9}\n",
+    "print(set1.issubset(set2))\n",
+    "print(set1.issuperset(set2))\n",
+    "print(set2.issuperset(set1))\n",
+    "print(set1.isdisjoint(set2))\n",
+    "if set1<set2:\n",
+    "    print(\"set 2 is a proper subset\")\n",
+    "elif set1>set2:\n",
+    "    print(\"set 1 is a proper subset\")\n",
+    "else:\n",
+    "    print(\"set 1 and set2 are equal subsets\")\n",
+    "\n",
+    "text=\"Counting the no of unique words in the text\"\n",
+    "unique_words = set(text.split())\n",
+    "print(unique_words)\n",
+    "print(len(unique_words))\n"
+   ],
+   "id": "83310f907ebcace3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{4, 5, 6}\n",
+      "{1, 2, 3}\n",
+      "{1, 2, 3, 7, 8, 9}\n",
+      "{4, 5, 6}\n",
+      "{4, 5, 6, 7, 8, 9}\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "set 2 is a proper subset\n",
+      "{'the', 'Counting', 'no', 'in', 'unique', 'text', 'words', 'of'}\n",
+      "8\n"
+     ]
+    }
+   ],
+   "execution_count": 33
   }
  ],
  "metadata": {
