--- a/4_Sets.ipynb
+++ b/4_Sets.ipynb
@@ -3,13 +3,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-17T16:02:34.117364Z",
-     "start_time": "2025-06-17T16:02:34.031687Z"
+     "end_time": "2025-06-17T17:03:31.245260Z",
+     "start_time": "2025-06-17T17:03:31.234158Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Creating a set and demonstrating set behavior\n",
+    "'''{} gives dict always '''\n",
     "sets = {1, 2, 3, 4, 1, 2, 3, 4}\n",
     "print(sets, type(sets))  # Duplicates are removed in a set\n",
     "\n",
@@ -46,8 +47,7 @@
     "# Membership tests\n",
     "new_set = {\"hello World\", 3.14}\n",
     "print(\"hello World\" in new_set)\n",
-    "print(\"first message\" in new_set)\n",
-    "\n"
+    "print(\"first message\" in new_set)"
    ],
    "id": "fa047e366cda6ec2",
    "outputs": [
@@ -66,7 +66,7 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 35
   },
   {
    "metadata": {},
